--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ datahub/movielens1M/*.pkl
 datahub/movielens1M/*.dat
 datahub/taobaoAD/*.pkl
 datahub/taobaoAD/*.dat
+datahub/steam/*.pkl
 datahub/item2users/*.pkl
 pretrain_backbones/*
 !pretrain_backbones/.gitkeep
